fix ingestion mapper